--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-elements.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-elements.html
@@ -233,24 +233,22 @@
                         </div>
                     </fieldset>
                 </div>
-                <div class="form-group">
-                    <!--<div class="form-group" th:classappend="${#fields.hasErrors('question.fileUploadGuidance')} ? 'form-group-error'">-->
+                <div class="form-group" th:classappend="${#fields.hasErrors('question.fileUploadGuidance')} ? 'form-group-error'">
                     <label class="form-label" for="question.fileUploadGuidance">
                         <span class="form-label-bold">Appendix guidance</span>
-                        <!--<th:block th:if="${#fields.hasErrors('question.fileUploadGuidance')}">-->
-                            <!--<span class="error-message"  th:each="err : ${#fields.errors('question.fileUploadGuidance')}" th:text="${err}" ></span>-->
-                        <!--</th:block>-->
+                        <th:block th:if="${#fields.hasErrors('question.fileUploadGuidance')}">
+                            <span class="error-message"  th:each="err : ${#fields.errors('question.fileUploadGuidance')}" th:text="${err}" ></span>
+                        </th:block>
                     </label>
                     <div class="textarea-wrapped">
                         <textarea data-max_words="500"
                                   data-editor="html"
                                   id="question.fileUploadGuidance"
-
+                                  th:classappend="${#fields.hasErrors('question.fileUploadGuidance')} ? 'form-control-error'"
                                   th:name="question.fileUploadGuidance"
-                                  required="required">
-                                  <!--ifs:utext="${question.fileUploadGuidance}">-->
+                                  required="required"
+                                  ifs:utext="${question.fileUploadGuidance}">
                         </textarea>
-                        <!--th:classappend="${#fields.hasErrors('question.fileUploadGuidance')} ? 'form-control-error'"-->
                         <div class="textarea-footer">
                             <span class="autosave-info"></span>
                         </div>
