--- a/ifs-data-layer/ifs-data-service/src/main/java/org/innovateuk/ifs/notifications/templates/notifications/email/invite_assessor_group_to_interview_text_html.html
+++ b/ifs-data-layer/ifs-data-service/src/main/java/org/innovateuk/ifs/notifications/templates/notifications/email/invite_assessor_group_to_interview_text_html.html
@@ -4,11 +4,11 @@
 
         <p>Dear ${name},</p>
 
-        <p>We are inviting you to the assessment interview panel for the competition '${competitionName}'.</p>
+        <p>We are inviting you to the interview panel for the competition '${competitionName}'.</p>
 
-        <p>We recognise your expertise and would greatly appreciate your comments on the scientific / business merit of the applications assigned to the interview panel.</p>
+        <p>We recognise your expertise and would greatly appreciate your comments on the scientific / business merit of the applications assigned to the interview panel assessment.</p>
 
-        <p>Please visit our online Innovation Funding Service to respond to this request: <a href="${inviteUrl}">${inviteUrl}</a></p>
+        <p>Please visit our online Innovation Funding Service to respond to this request.</p>
 
         <p style="margin: 0 0 1em 0;">
             ${customTextHtml?no_esc}
