IFS-2565 - Now using FileTypeCategory enum in CompetitionSetupQuestionResource and comp setup thymeleaf form

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-elements.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-elements.html
@@ -232,7 +232,7 @@
                             <input type="checkbox"
                                    th:id="${'allowed-file-types-' + fileTypeCategory.displayName}"
                                    th:field="*{question.allowedFileTypes}"
-                                   th:value="${fileTypeCategory.displayName}"
+                                   th:value="${fileTypeCategory.name()}"
                                    name="allowedFileTypes"
                                    required="required" />
                             <label th:for="${'allowed-file-types-' + fileTypeCategory.displayName}" th:text="${fileTypeCategory.displayName}">PDF</label>
