IFS-2251 Interview panel email content updates

--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2247-review-send.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2247-review-send.html
@@ -27,47 +27,26 @@
 
 	<div class="form-group">
 		<label class="form-label-bold" for="subject">Email subject</label>
-    	<input class="form-control width-full" id="subject" type="text" value="Invitation to Innovate UK interview panel for [competition]" />
+    	<input class="form-control width-full" id="subject" type="text" value="Invitation to Innovate UK interview panel for [Competition name]" />
 	</div>
 
     <div class="form-group">
         <h3 class="heading-small no-margin">Message</h3>
-        <p class="form-hint" style="white-space: pre-wrap">Dear [Firstname Lastname]</p>
+        <p class="form-hint" style="white-space: pre-wrap">
+Dear [Firstname Lastname]
+
+We are inviting you to the interview panel for the competition 'Competition name'.
+
+We recognise your expertise and would greatly appreciate your comments on the scientific or business merit of the applications assigned to the interview panel.
+
+Please visit our online Innovation Funding Service to respond to this request. [invite URL]
+        </p>
     </div>
 
 	<div class="form-group">
 		<label class="form-label-bold" for="message">Additional text</label>
-        <p>Make sure you replace all the [ and ] and the words in between.</p>
         <div class="textarea-wrapped">
-    	    <textarea id="message" rows="30" data-editor="md" class="width-full">
-You are invited to attend the next stage in the assessment process for this competition, which is the interview panel. To respond, visit the online competition page [insert link into the words “competition’s page” and delete this guidance].
-
-If you confirm you are available, the applications will appear in your [Innovation Funding Service account](https://auth.apply-for-innovation-funding.service.gov.uk/idp/profile/SAML2/Redirect/SSO?execution=e2s1) for you to review during the pre-reading period.
-
-**When**
-
-Pre-reading period to review applications: [date month year] to [date month year]
-
-Applicants' response-to-feedback documents and presentations available by: [date month year]
-
-Interview panel date[s]: [date month year] to [date month year]
-
-We will send an agenda with the start and finish times for the interview panel in a later email.
-
-**Where**
-
-[edit if required]
-Polaris House
-North Star Avenue
-Swindon
-SN2 1UH
-
-There are directions on the [Research Councils UK website](http://www.rcuk.ac.uk/contacts/howtoreachus/). When you arrive, ask for [NAME].
-
-**Fee**
-
-We pay &pound;500 a day for your attendance and [£500 for pre-reading], plus travel and subsistence. Sign in to the [Innovation Funding Service](https://auth.apply-for-innovation-funding.service.gov.uk/idp/profile/SAML2/Redirect/SSO?execution=e2s1) to see the travel and subsistence rates we offer. After the panel, please send your invoice and receipts for travel and subsistence to [competitions.admin@innovateuk.gov.uk](mailto:competitions.admin@innovateuk.gov.uk).
-
+    	    <textarea id="message" rows="8" data-editor="md" class="width-full">
             </textarea>
         </div>
 	</div>
