--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview-find.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview-find.html
@@ -11,7 +11,7 @@
 <main tabindex="-1" id="content">
     <th:block th:insert="fragments/layout :: main-content-start"/>
     <th:block th:insert="fragments/layout :: header-sub"
-              th:with="linkTitle='Competition',linkClass='link-back',linkUrl=@{/competition/{competitionId}(competitionId=${model.competitionId})}"/>
+              th:with="linkTitle='Manage interview panel',linkClass='link-back',linkUrl=@{/interview/panel/competition/{competitionId}(competitionId=${model.competitionId})}"/>
 
     <th:block th:insert="fragments/layout :: page-title"
               th:with="pageTitle='Invite assessors to interview panel',subTitle=${model.competitionName},size='heading-xlarge'"/>
