--- a/ifs-data-layer/ifs-data-service/src/main/java/org/innovateuk/ifs/notifications/templates/notifications/email/invite_assessor_group_to_interview_text_html.html
+++ b/ifs-data-layer/ifs-data-service/src/main/java/org/innovateuk/ifs/notifications/templates/notifications/email/invite_assessor_group_to_interview_text_html.html
@@ -6,7 +6,7 @@
 
         <p>We are inviting you to the interview panel for the competition '${competitionName}'.</p>
 
-        <p>We recognise your expertise and would greatly appreciate your comments on the scientific / business merit of the applications assigned to the interview panel assessment.</p>
+        <p>We recognise your expertise and would greatly appreciate your comments on the scientific or business merit of the applications assigned to the interview panel.</p>
 
         <p>Please visit our online Innovation Funding Service to respond to this request.</p>
 
