--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/form-elements.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/form-elements.html
@@ -31,6 +31,7 @@
 <th:block th:fragment="form-hint (hint)">
     <span class="form-hint" th:if="${hint}" ifs:utext="${hint}"></span>
 </th:block>
+
 <!-- ========================= Form Guidance =========================== -->
 
 <th:block th:fragment="form-guidance (guidable)">
@@ -41,6 +42,30 @@
         <div class="panel wysiwyg-styles" ifs:utext="${guidable.getGuidanceAnswer()}"/>
     </details>
 </th:block>
+
+<!-- ========================= Form Guidance (File upload) ===================== -->
+
+<th:block th:fragment="form-guidance-file (guidable)">
+    <details th:if="${guidable?.guidanceTitle}">
+        <summary>
+            <span class="summary" th:text="${guidable.guidanceTitle}"/>
+        </summary>
+        <div class="panel wysiwyg-styles">
+            <th:block ifs:utext="${guidable.guidanceAnswer}">
+            </th:block>
+
+            <h4 class="heading-small no-margin">Accepted appendix file types</h4>
+
+            <ul>
+                <li th:text="${allowedFileType.getDisplayName()}" th:each="allowedFileType : ${guidable.allowedFileTypesSet}">
+                    PDF
+                </li>
+                <li>less than 1MB in size</li>
+            </ul>
+        </div>
+    </details>
+</th:block>
+
 <!-- ========================= input field type text =========================== -->
 
 <th:block th:fragment="form-textinput (id, response)">
