--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/types.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/types.html
@@ -99,7 +99,7 @@
          saveName='upload_file'">
 
         <h3 class="heading-small no-margin" th:text="${formInput.description}">Project management appendix</h3>
-        <th:block th:if="${viewmode=='edit'}" th:insert="question-type/form-elements :: form-guidance (guidable=${formInput})" />
+        <th:block th:if="${viewmode=='edit'}" th:insert="question-type/form-elements :: form-guidance-file (guidable=${formInput})" />
         <th:block th:insert="question-type/types :: fileupload-fragment(${viewmode},${downloadUrl},${filename}, ${inputField}, ${validationField}, ${mayRemove}, ${removeName}, ${saveName})" />
     </div>
 
