IFS-2246 Prot tweaks

--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2245-interview-panel-dashboard.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2245-interview-panel-dashboard.html
@@ -21,6 +21,8 @@
 
     <th:block th:insert="prototypes/fragments/comp-admin :: prototype-comp-admin-page-title-subheading(${'68: Technology inspired, competition closed'}, ${'Manage interview panel'}, ${null})" />
 
+    <h2 class="heading-medium">Key statistics</h2>
+
         <ul class="grid-row">
 
             <li class="column-quarter">
