--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-assign-applications.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-assign-applications.html
@@ -20,6 +20,8 @@
 
 	<th:block th:insert="prototypes/fragments/comp-admin :: prototype-comp-admin-page-title-subheading(${'68: Technology inspired, competition closed'}, ${'Assign applications to interview panel'}, ${null})" />
 
+    <h2 class="heading-medium">Key statistics</h2>
+
     <ul class="grid-row">
         <li class="column-quarter">
             <div class="highlight-panel highlight-panel-padded">
