--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2247-review-send.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2247-review-send.html
@@ -22,7 +22,7 @@
 
   <th:block th:insert="prototypes/fragments/comp-admin :: prototype-comp-admin-page-title-subheading(${'68: Technology inspired, competition closed'}, ${titleStatus} + ${' invite to assessors'}, ${null})" />
 
-	<h2 class="heading-medium">Assessors selected</h2>
+	<h2 class="heading-medium">Recipients</h2>
     <p>Dave Smith, Christopher Soames, Martin Trollope</p>
 
 	<div class="form-group">
