--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/form-elements.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/form-elements.html
@@ -60,8 +60,8 @@
                 <li th:text="${allowedFileType.getDisplayName()}" th:each="allowedFileType : ${guidable.allowedFileTypesSet}">
                     PDF
                 </li>
-                <li>less than 1MB in size</li>
             </ul>
+            <p>It must be less than 1MB in size.</p>
         </div>
     </details>
 </th:block>
