IFS-2564 - Rename guidance fragment to reference 'appendix' rather than 'file'

--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/form-elements.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/form-elements.html
@@ -43,9 +43,9 @@
     </details>
 </th:block>
 
-<!-- ========================= Form Guidance (File upload) ===================== -->
+<!-- ========================= Form Guidance (Appendix) ===================== -->
 
-<th:block th:fragment="form-guidance-file (guidable)">
+<th:block th:fragment="form-guidance-appendix (guidable)">
     <details th:if="${guidable?.guidanceTitle}">
         <summary>
             <span class="summary" th:text="${guidable.guidanceTitle}"/>
