IFS-2565 Update autosave to handle a list of checkbox elements

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-elements.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-elements.html
@@ -234,7 +234,8 @@
                                    th:field="*{question.allowedFileTypes}"
                                    th:value="${fileTypeCategory.name()}"
                                    name="allowedFileTypes"
-                                   required="required" />
+                                   required="required"
+                                   data-autosave-list />
                             <label th:for="${'allowed-file-types-' + fileTypeCategory.displayName}" th:text="${fileTypeCategory.displayName}">PDF</label>
                         </div>
                     </fieldset>
