IFS-2533 JS form validation

--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/grant-offer-letter-send.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/grant-offer-letter-send.html
@@ -133,7 +133,6 @@
                     </div>
                     <div class="multiple-choice" data-target="reject-gol">
                         <input id="rejectGOL" value="REJECTED" type="radio" name="approvalType" required="required"
-                               data-switches-button-status="#submit-button"
                                data-switches-modal-target="#submit-button"
                                data-switches-modal-target-value="modal-reject-signed-gol"
 
@@ -147,7 +146,12 @@
                             <label for="gol-reject-reason" class="form-label">
                                 Reason for rejection (this will not be seen by the project team)
                             </label>
-                            <input type="text" class="form-control width-full" id="gol-reject-reason" name="GOLRejectReason" required="required" />
+                            <input type="text"
+                                   class="form-control width-full"
+                                   id="gol-reject-reason"
+                                   name="GOLRejectReason"
+                                   required="required"
+                                   data-switches-button-status="#submit-button"/>
                         </div>
                     </div>
                 </fieldset>
